--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
         <artifactId>tomcat-jsp-api</artifactId>
         <version>${tomcat.version}</version>
     </dependency>
+       <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+
   </dependencies>
   <build>
     <finalName>embeddedTomcatSample</finalName>
